# server-and-database

./: .gitignore  Cargo.toml  Dockerfile
migration/: Cargo.toml
migration/src/: lib.rs  m20240820_000001_create_user_table.rs  m20240820_000002_create_post_table.rs
src/: main.rs  post.rs  user.rs
